v1.0.5 - Added New Envi Theme, Purple Theme, Bugs Squashed!

--- a/envi-interact/ui/themes/envi-theme.css
+++ b/envi-interact/ui/themes/envi-theme.css
@@ -1,34 +1,31 @@
 .choice__container,
 .slider__wrapper,
 .bubble__chat--container {
-  background: #1b1b1b;
+  background: #1d2e3e;
 }
 
 .choice__title {
-  color: #fff;
+  color: #e0eaf7;
 }
 
 .option__item .option__key,
 .option__item .option__content {
-  border: .1vh solid #fff;
-  background: linear-gradient(186deg, rgba(158, 158, 158, 0.4) -20.85%, rgba(255, 253, 253, 0.45) -20.83%, rgba(255, 255, 255, 0.24) 116.4%);
-  color: #fff;
+  background: #1f334c;
+  color: #cedae7;
 }
 
 .option__item:hover .option__key,
 .option__item.active .option__key,
 .option__item:hover .option__content,
 .option__item.active .option__content {
-  background: linear-gradient(360deg, rgba(43, 29, 110, 0.5) 0%, rgba(97, 65, 255, 0.185) 100%);
-  color: #fff;
-  box-shadow: 0 0 3px #fff, 0 0 6px #fff;
+  background: #1e3c66;
+  color: #cedae7;
 }
 
 .option__item.disabled .option__key,
 .option__item.disabled .option__content {
-  border: .1vh solid #fff;
-  background: linear-gradient(186deg, rgba(158, 158, 158, 0.4) -20.85%, rgba(255, 253, 253, 0.45) -20.83%, rgba(255, 255, 255, 0.24) 116.4%);
-  color: #fff;
+  background: #1f334c;
+  color: #cedae7;
   cursor: default;
 }
 
@@ -38,14 +35,14 @@
 
 .slider::-webkit-slider-thumb {
   background-color: #fff;
-  border: .35vh solid rgb(68, 46, 175);
-  box-shadow: -407px 0 0 400px rgb(68, 46, 175);
+  border: .35vh solid #2f85be;
+  box-shadow: -407px 0 0 400px #2f85be;
 }
 
 .slider::-moz-range-thumb {
   background-color: #fff;
-  border: .1vh solid rgb(42, 29, 110);
-  box-shadow: -407px 0 0 400px rgb(42, 29, 110);
+  border: .35vh solid #2f85be;
+  box-shadow: -407px 0 0 400px #2f85be;
 }
 
 .slider::-moz-range-track {
@@ -53,52 +50,48 @@
 }
 
 .slider__submit {
-  border: .1vh solid #fff;
-  background: linear-gradient(186deg, rgba(158, 158, 158, 0.4) -20.85%, rgba(255, 253, 253, 0.45) -20.83%, rgba(255, 255, 255, 0.24) 116.4%);
-  color: #fff;
+  background: #284563;
+  color: #ABD7FF;
 }
 
 .slider__submit:hover {
-  background: linear-gradient(360deg, rgba(43, 29, 110, 0.5) 0%, rgba(97, 65, 255, 0.185) 100%);
-  box-shadow: 0 0 3px #fff, 0 0 6px #fff;
+  background: #2f85be;
+  color: #FEFFFF;
 }
 
 .slider__submit.locked {
-  background: linear-gradient(186deg, rgba(158, 158, 158, 0.4) -20.85%, rgba(255, 253, 253, 0.45) -20.83%, rgba(255, 255, 255, 0.24) 116.4%);  
+  background: #284563;
 }
 
 .slider__content {
-  color: #fff;
+  color: #e0eaf7;
 }
 
 .overlay {
-  background: linear-gradient(360deg, rgba(0, 0, 0, 0.5) 0%, rgba(97, 65, 255, 0.185) 100%);
-  border: .15vh solid #6f00ff;
+  background: linear-gradient(360deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.185) 100%);
 }
 
 .percentage__container {
-  background: #25272C;
+  background: #1a252f;
 }
 
 .bubble__chat--content {
-  color: #fff;
+  color: #e0eaf7;
 }
 
 .bubble__chat--container::before {
-  border-top: 1.45vh solid #6f00ff;
+  border-top: 1.45vh solid #1a252f;
 }
 
 [data-tooltip]:before { 
-  border: .1vh solid rgb(255, 255, 255) !important;
-  background: linear-gradient(186deg, rgba(158, 158, 158, 0.4) -20.85%, rgba(255, 253, 253, 0.45) -20.83%, rgba(255, 255, 255, 0.24) 116.4%) !important;
-  border-radius: .4vh !important;
-  color: #fff !important;
+  background: #1a252f !important;
+  color: #e0eaf7 !important;
 }
 
 [data-tooltip]:after { 
-  border-top-color: #ffffff !important;
+  border-top-color: #e0eaf7 !important;
 }
 
 [data-tooltip][class*="tooltip-bottom"]:after {
-  border-bottom-color: #ffffff !important;
+  border-bottom-color: #e0eaf7 !important;
 }
